# taskcontext

./: .gitignore  .tox.ini  README.rst  setup.cfg
taskcontext/: core.py  example.py
tests/: test_example.py
