# copied from https://github.com/jaedb/Iris
[metadata]
name = taskcontext
version = 0.1.0
url = https://github.com/mortbauer/taskcontext
author = Martin Ortbauer
author_email = mortbauer@gmail.com
license = MIT
license_file = LICENSE
description = TaskManager with context resolution
long_description = file: README.rst
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    friendly-states
    networkx
    setuptools


[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-bugbear
    flake8-import-order
    isort[pyproject]
release =
    twine
    wheel
test =
    pytest
    pytest-cov
dev =
    %(lint)s
    %(release)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*



[flake8]
application-import-names = taskcontext, tests
max-line-length = 80
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
    # B305: .next() is not a thing on Python 3 (used by playback controller)
    B305
exclude =
    .git
    .tox
    docs
    tests
    src

[check-manifest]
ignore =
    build_tools
    build_tools/*
    docker
    docker/*
    Screenshots
    Screenshots/*
    node_modules
    node_modules/*
    src
    src/*
    .circleci
    .circleci/*
    .dockerignore
    .htaccess
    .vscode
    .vscode/*
    .dockerignore
    VERSION
    .coverage
    .eslintrc.json
    _config.yml
    babel.config.js
    docker-compose.example.yml
    index.html
    package-lock.json
    package.json
    webpack.config.js
    tests/__pycache__
    tests/__pycache__/*

[tool:pytest]
norecursedirs =
    build_tools
    build_tools/*
    docker
    docker/*
    Screenshots
    Screenshots/*
    src
    src/*
    node_modules
    node_modules/*
    .circleci
    .circleci/*
    .dockerignore
    .htaccess
    .vscode
    .vscode/*
    .dockerignore
